# IA

./: Dockerfile  README.md  pyproject.toml  rationale.md
ia/: __init__.py
tests/: __init__.py
