[tool.poetry]
name = "ia"
version = "0.1.0"
description = ""
authors = ["Miguel Casado Pina <miguel.cpina@alumnos.upm.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
xmltodict = "^0.13.0"
wordcloud = "^1.8.2.2"
matplotlib = "^3.7.1"
beautifulsoup4 = "^4.11.2"
nltk = "^3.8.1"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
